Adding more examples

--- a/module-01/src/main/resources/message-support-factory.properties
+++ b/module-01/src/main/resources/message-support-factory.properties
@@ -1,2 +1,2 @@
-renderer.class=getting_started.without.flexible.StandardOutMessageRenderer
-provider.class=getting_started.without.flexible.SimpleMessageProvider
+renderer.class=getting_started.without.flexible.HtmlOutMessageRenderer
+provider.class=getting_started.without.flexible.ComplexMessageProvder
