--- a/module-01/pom.xml
+++ b/module-01/pom.xml
@@ -6,6 +6,8 @@
     <packaging>pom</packaging>
     <modules>
         <module>appcontext-integrationtest</module>
+        <module>diwithannotation</module>
+        <module>container-lifecycle</module>
     </modules>
 
     <properties>
@@ -22,11 +24,6 @@
             <artifactId>spring-context</artifactId>
             <version>5.3.0</version>
         </dependency>
-       <!-- <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <version>1.18.8</version>
-        </dependency>-->
     </dependencies>
 
 </project>
