--- a/module-01/pom.xml
+++ b/module-01/pom.xml
@@ -8,6 +8,7 @@
         <module>appcontext-integrationtest</module>
         <module>diwithannotation</module>
         <module>container-lifecycle</module>
+        <module>profiles</module>
     </modules>
 
     <properties>
@@ -23,6 +24,11 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
             <version>5.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.1</version>
         </dependency>
     </dependencies>
 
