--- a/module-01/profiles/pom.xml
+++ b/module-01/profiles/pom.xml
@@ -9,12 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>container-lifecycle</artifactId>
+    <artifactId>profiles</artifactId>
 
-    <dependencies>
-       <!-- <dependency>
-            <groupId>javax.annotation</groupId>
-            <artifactId>javax.annotation-api</artifactId>
-        </dependency>-->
-    </dependencies>
+
 </project>
